--- a/index.html
+++ b/index.html
@@ -330,4 +330,13 @@
 
       
   </body>
+  <html>
+<body>
+
+<h2>HTML Image</h2>
+<img src="pic_trulli.jpg" alt="Trulli" width="500" height="333">
+
+</body>
+</html>
+  
 </html>
